--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,5 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m unittest tests/test_main.py
+       python -m unittest discover tests
+    
